[add] user authentication ok
