# routes/api.php
@@ -2,13 +2,22 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\AuthController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
+Route::post('/user', function (Request $request) {
+    return response()->json(['user' => $request->user()]);
 })->middleware('auth:sanctum');
 
-Route::get('/products', 'App\Http\Controllers\ProductController@index');
-Route::get('/products/{id}', 'App\Http\Controllers\ProductController@show');
-Route::post('/products', 'App\Http\Controllers\ProductController@store');
-Route::put('/products/{id}', 'App\Http\Controllers\ProductController@update');
-Route::delete('/products/{id}', 'App\Http\Controllers\ProductController@destroy');
+// User Authentication
+
+Route::post('/register', 'App\Http\Controllers\AuthController@register');
+Route::post('/login', 'App\Http\Controllers\AuthController@login');
+Route::post('/logout', 'App\Http\Controllers\AuthController@logout')->middleware('auth:sanctum');
+
+// Products
+
+Route::get('/products', 'App\Http\Controllers\ProductController@index')->middleware('auth:sanctum');
+Route::get('/products/{id}', 'App\Http\Controllers\ProductController@show')->middleware('auth:sanctum');
+Route::post('/products', 'App\Http\Controllers\ProductController@store')->middleware('auth:sanctum');
+Route::put('/products/{id}', 'App\Http\Controllers\ProductController@update')->middleware('auth:sanctum');
+Route::delete('/products/{id}', 'App\Http\Controllers\ProductController@destroy')->middleware('auth:sanctum');
